# HRP-Airflow

./: .gitignore  README.md  airflow.sh  alembic.ini  main.py  pyproject.toml  requirements.txt  start.sh
.airflow/: airflow.cfg  airflow.db  simple_auth_manager_passwords.json.generated
airflow/dags/: portfolio_optimization_sensor.py  run_hrp_optimization.py  update_daily_prices.py
alembic/: env.py
alembic/versions/: 72f949e259ba_add_period_to_portfolio.py
backend/app/: database.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  portfolios.py  reports.py
backend/app/tasks/: optimizer.py
db/: schema.sql
frontend/: index.html
frontend/src/: api.js  main.jsx
frontend/src/app/: layout.jsx
frontend/src/app/(protected)/: layout.jsx  page.jsx
frontend/src/app/(protected)/portfolio/[id]/: page.jsx
frontend/src/app/login/: page.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  Portfolio.jsx
notebook/: notebook.ipynb
