[project]
name = "hrp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==3.0.4",
    "apache-airflow-providers-fab>=2.3.1",
    "flask-appbuilder>=4.6.3",
    "ipykernel>=7.0.1",
    "logging>=0.4.9.6",
    "quantstats>=0.0.77",
]
